update backend url link

--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
 frontend.url = http://example.com
-backend.rest = https://quiet-wildwood-72337.herokuapp.com/api/v1/on-covid-19
+backend.rest = https://shrouded-depths-84120.herokuapp.com/api/v1/on-covid-19
